--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,10 +7,9 @@ name: Docker
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ "main" ]
-    # Publish semver tags as releases.
-    tags-ignore: [ 'main' ]
+  release:
+    types:
+      - published
 
 env:
   # github.repository as <account>/<repo>
